--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     --secondColor:#808DAD;
     --redColor:#EB4A4A;
     --whiteColor:#fff;
-    --shadow-black-100:0 5px 15px #808DAD;
+    --shadow-black-100:0 2px 10px #808dad9c;
     --transparentBordercolor:#808dad2e;
 
 }
@@ -76,6 +76,7 @@ li.active a
 {
     color: var(--whiteColor);
     border: 0.2rem solid var(--whiteColor);
+    background: var(--secondColor)
 
 }
 /*############ end global item###############*/
@@ -93,13 +94,25 @@ li.active a
     padding: 1.5rem 9%;
     min-height: 8rem;
     z-index: 1000;
-    /* background: var(--mainColor) ; */
+    
     border-bottom: 0.1rem solid var(--transparentBordercolor);
     
+}
+.header.header-with-scrol
+{
+    background: var(--mainColor) ;
+    padding: 1.2rem 2.5rem;
+
 }
 .header .menu-btn
 {
     display: none;
+    font-size: 2.5rem;
+}
+
+.header .navBar.active
+{
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 }
 .header .logo a
 {
@@ -208,24 +221,30 @@ li.active a
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
     background: url(../images/svg/Colored\ Patterns.svg);
 }
-.home .txt-content,
-.home .image
+.home .txt-content
 {
-    flex: 0 0 50%;
-    max-width: 50%;
+    flex: 0 0 60%;
+    max-width: 60%;
     padding: 0 3rem;
 
 }
 .home .image
 {
+    flex: 0 0 40%;
+    max-width: 40%;
     background-color: var(--secondColor);
     border-radius: 5rem;
-    height: 70%;
     overflow: hidden;
     padding: 0;
+    border: 0.2rem solid var(--secondColor);
 
+}
+.home .image img
+{
+    filter: brightness(0.8);
 }
 .home .txt-content .hello 
 {
@@ -272,31 +291,143 @@ li.active a
 .home .txt-content .button
 {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
+    gap: 3rem;
     align-items: center;
     margin: 1.5rem 1.5rem;
 }
 /* ########### end home ##################*/
 
 /* ########### start about ##################*/
+.about
+{
+    margin-top: 8rem;
+}
+.about .main-header h2,
+.our-work .main-header h2
+{
+    text-align: center;
+    font-size: 4.5rem;
+    font-size: 800;
+}
+.about ul,
+.our-work ul
+{
+    margin-left: .5rem;
+    text-align: center;
+}
+.about ul li,
+.our-work ul li
+{
+    background: var(--redColor);
+    display: inline-block;
+    height: 0.3rem;
+}
+.about ul li:nth-of-type(1),
+.our-work ul li:nth-of-type(1)
+{
+    width: 13%;
+    background: var(--whiteColor);
+}
+.about ul li:nth-of-type(2),
+.our-work ul li:nth-of-type(2)
+{
+    width: 5%;
+    background: var(--redColor);
+}
+.about ul li:nth-of-type(3),
+.our-work ul li:nth-of-type(3)
+{
+    width: 10%;
+    background: var(--whiteColor);
+}
+
+
 .about-me
 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 2rem;
+    gap: 6rem;
+    
+   
 }
-.about-me .skils,
-.about-me .experence
+.about-me .about-image
 {
-    flex: 0 0 50%;
-    max-width: 50%;
+    position: relative;
+    flex: 0 0 40%;
+    max-width: 40%;
+    min-height: 32rem;
+    border: 0.3rem solid var(--redColor);
+    padding: 5rem;
 }
-.about-me h4
+.about-me .about-image .img-box
 {
-    font-size: 5rem;
+    position: absolute;
+    top: 50%;
+    padding: 1rem;
+    left: 0px;
+    overflow: hidden;
+    transform: translate(-9%,-51%);
+
+}
+.about-image .image-shape
+{
+    background: var(--secondColor);
+    position: absolute;
+    right: 0%;
+    top: 2.5rem;
+    width: 9rem;
+    height: 0.5rem;
+    border-radius: 2.5rem;
+}
+.about-image .image-shape::before
+{
+    content: "";
+    background: var(--redColor);
+    position: absolute;
+    right: 0;
+    top: -1rem;
+    width: 7rem;
+    height: 0.5rem;
+    border-radius: 2.5rem;
+}
+.about-image .image-shape::after
+{
+    content: "";
+    background: var(--redColor);
+    position: absolute;
+    right: 0%;
+    top: 1rem;
+    width: 5rem;
+    height: 0.5rem;
+    border-radius: 2.5rem;
+}
+.about-me .about-content
+{
+    flex: 0 0 60%;
+    max-width: 60%;
+    padding: 2rem;
+}
+.about-me .about-content .title-section
+{
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 30px;
+}
+.about-me h5
+{
+    font-size: 2rem;
+    font-weight: 500;
+    line-height: 1.7;
+    color: var(--redColor);
+}
+.about-me h3
+{
+    font-size: 3.5rem;
     font-weight: 800;
     line-height: 1.7;
+    margin-top: 1rem;
 }
 .about-me p
 {
@@ -306,60 +437,411 @@ li.active a
 }
 .about-me ul
 {
-    display: flex;
-    flex-direction: column;
+    margin-left: .5rem;
 }
 .about-me ul li
 {
-    display: flex;
-    gap: 1.5rem;
-    padding: 1.5rem 0;
-    font-size: 1.6rem;
+    background: var(--redColor);
+    display: inline-block;
+    height: 0.3rem;
 }
-.about-me ul li >i
+.about-me ul li:nth-of-type(1)
 {
-    color: var(--redColor);
+    width: 10%;
+}
+.about-me ul li:nth-of-type(2)
+{
+    width: 30%;
+    background: var(--secondColor);
+}
+.about-me ul li:nth-of-type(3)
+{
+    width: 20%;
+}
+
+.about-me .about-content .progress-skils
+{
+
+}
+.about-me .about-content .progress-item
+{
+    margin-top: 1.5rem;
+
+}
+.about-me .about-content .progress-item .progress-header
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.about-me .progress-item-header
+{
+    font-size: 1.6rem;
+    font-weight: 400;
+    color: var(--secondColor);
+}
+.about-me .progress-item .skill-persentage p
+{
+    font-size: 1.6rem;
+    font-weight: 400;
+    color: var(--whiteColor);
+}
+.about-me .about-content .progress-item .skill-bar
+{
+    margin-top: .7rem;
+
+}
+.about-me .about-content .progress-item .skill-bar .bar-inner
+{
+    width: 100%;
+    height: 0.9rem;
+    background: #808dad4d;
+    
+}
+
+.about-me .about-content .progress-item .skill-bar .bar-inner .progress-line
+{
+   position: relative;
+    height: 0.9rem;
+    background: var(--redColor);
+
+}
+.about-me .about-content .progress-item .skill-bar .bar-inner .progress-line::before
+{
+    position: absolute;
+    right: 0;
+    top: 50%;
+    height: 0.8rem;
+    content: "";
+    border: 0.4rem solid var(--redColor);
+    transform: translatey(-50%);
+    border-radius: 0.2rem;
+    cursor: pointer;
 }
 /* ########### end about ##################*/
 /* ########### start services ##################*/
 .services .heding
 {
-    font-size: 4rem;
     text-align: center;
     margin-bottom: 2rem;
 }
 .services .heding span
 {
     color: var(--redColor);
+    font-size: 4.5rem;
+    margin-bottom: 2.5rem;
+    display: inline-block;
 }
 .services .box-container 
 {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
-    gap: 1.5rem;
-    padding: 2rem 0;
+    display: flex; 
+    flex-wrap: wrap;
 }
-.services .box-container .box
+.services .box-container .service-box
 {
-    background: var(--secondColor);
-    border-radius: 1rem;
-    padding: 3rem;
+    flex: 0 0 33.33%;
+    max-width: 33.33%;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    cursor: pointer;
+}
+.services .box-container .service-box:hover .box
+{
+    box-shadow: var(--shadow-black-100);
+}
+.services .box-container .service-box .box
+{
+    padding: 50px 15px;
+    border-radius: 10px;
+    width: 100%;
     text-align: center;
-    border: 0.1rem solid var(--redColor);
+    transition: all 0.3s ease;
+    background: #808dad4a;
+}
+.services .box-container .service-box .box .service-icon
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 60px;
+    width: 60px;
+    background-color: var(--redColor);
+    margin: 0 auto 30px;
+    text-align: center;
+    font-size: 28px;
+    color: var(--whiteColor);
+    border-radius: 20px;
+    border-bottom-right-radius: 0;
+   
+}
+.services .box-container .service-box .box h4
+{
+    font-size: 2rem;
+    font-weight: 800;
+    line-height: 1.7;
+    margin: 0 0 1rem;
+
+}
+.services .box-container .service-box .box p
+{
+    font-size: 1.7rem;
+    font-weight: 500;
+
 }
 /* ########### end services ##################*/
 
+
+/* ########### start our work ##################*/
+.our-work .work-container
+{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 6rem;
+}
+.our-work .work-container .box
+{
+    flex: 0 0 33.33%;
+    max-width: 33.33%;
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.our-work .work-container .box .image
+{
+    width: 100%;
+    overflow: hidden;
+    border-radius: 10px;
+    cursor: pointer;
+    position: relative;
+    
+}
+.our-work .work-container .box:hover .image
+{
+    box-shadow: var(--shadow-black-100);
+
+}
+.our-work .work-container .box .image img
+{
+    width: 100%;
+    display: block;
+
+}
+/* ########### end our work ##################*/
+
 /* ########### start contact ##################*/
+.contact
+{
+
+}
+.contact .box-container
+{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    gap: 1.5rem;
+}
+.contact .box-container .social-media-box i
+{
+    font-size: 2.5rem;
+    color: var(--redColor);
+    margin-right: 1.5rem;
+}
+.contact .box-container .social-media-box a
+{
+    font-size: 2.5rem;
+   
+
+}
+.contact .box-container .social-media-box p
+{
+    font-size: 1.7rem;
+}
+.contact .social-links
+{
+    padding-top: 2rem;
+}
+.contact .social-links a
+{
+    height: 4.5rem;
+    width: 4.5rem;
+    line-height: 4rem;
+    font-size: 2rem;
+    border-radius: 50%;
+    font-size: 1.7rem;
+    border: 0.2rem solid var(--redColor);
+    color: var(--redColor);
+    margin-right: 0.5rem;
+    text-align: center;
+    display: inline-block;
+}
+.contact .social-links a:hover
+{
+    border: 0.2rem solid var(--whiteColor);
+    color: var(--whiteColor);
+
+}
+.contact .form-box
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.contact .form-box form
+{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.contact .form-box form input,
+.contact .form-box form textarea
+{
+    padding: 1.5rem;
+    margin-bottom: 0.5rem;
+    border-radius: 0.5rem;
+    background: #808dad4a;
+}
+.contact .form-box form textarea
+{
+    resize: none;
+    height: 20.8rem;
+}
+.contact .form-box form input::placeholder,
+.contact .form-box form textarea::placeholder
+{
+    color: var(--secondColor);
+}
+.contact .form-box form input.send
+{
+    width: fit-content;
+    padding: 1rem 2rem;
+}
 
 /* ########### end contact ##################*/
 /* ########### start footer ##################*/
 .footer
 {
     padding: 2rem 0;
-    background: var(--secondColor);
+    background: var(--mainColor);
     text-align: center;
     font-size: 2.5rem;
     font-weight: 500;
+    border-top: 00.1rem solid var(--transparentBordercolor);
     
 }
 /* ########### end footer ##################*/
+@media (max-width:768px){
+
+    html{
+        font-size: 45%;
+    }
+
+    .header{
+        padding:1rem 1.5rem;
+    }
+
+    section{
+        padding:2rem 1.5rem;
+    }
+    .header .phoneNumber
+    {
+        display: none;
+    }
+    .header .menu-btn
+    {
+        display: inline-block;
+    }
+    .header .navBar
+    {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background: var(--mainColor);
+        border-top: 0.1rem solid var(--transparentBordercolor);
+        border-bottom: 0.1rem solid var(--transparentBordercolor);
+        padding: 1rem;
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    }
+    .home
+    {
+        height: auto;
+        
+    }
+    .home .txt-content
+    {
+        flex: 0 0 100%;
+        max-width: 100%;
+        padding: 0 3rem;
+
+    }
+    .home .image
+    {
+        display: none;
+
+    }
+    .button .btn
+    {
+        font-size: 1.4rem;
+        padding: 1rem 1.5rem;
+    }
+    .button .btn i
+    {
+        margin: 0 .5rem;
+    }
+    
+    .about-me
+    {
+        flex-direction: column;
+    }
+    .about-me .about-image {
+        flex: 0 0 100%;
+        width: 80%;
+        max-width: 100%;
+        border: 0.3rem solid var(--redColor);
+        margin-top: 4rem;
+    }
+    .about-me .about-image img
+    {
+        max-width: 30rem;
+    }
+    
+    
+    .about-me .about-content {
+        flex: 0 0 100%;
+        max-width: 100%;
+        padding: 2rem;
+    }
+    .services .box-container .service-box
+    {
+        flex: 0 0 100%;
+        max-width: 100%;
+
+    }
+    .social-media-box
+    {
+        margin-bottom: 2.5rem;
+        text-align: center;
+    }
+    
+
+}
+
+@media (max-width:991px){
+
+    html{
+        font-size: 55%;
+    }
+
+    .header{
+        padding:1.5rem 2rem;
+    }
+
+    section{
+        padding:3rem 2rem;
+    }
+    .about-me
+    {
+        gap: 1rem;
+    }
+
+}
