--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,15 @@ body
     color: var(--whiteColor);    
 
 }
+body.ligth 
+{
+    --mainColor:#fbfbfb;
+    --secondColor:#808DAD;
+    --redColor:#EB4A4A;
+    --whiteColor:#0E1630;
+    --shadow-black-100:0 2px 10px #808dad9c;
+    --transparentBordercolor:#808dad2e;
+}
 section
 {
     padding: 3rem 9%;
@@ -211,11 +220,13 @@ li.active a
     padding: 0rem 1rem;
 }
 
+
 /* ###########end header ##################*/
 
 /* ###########start home ##################*/
 .home
 {
+    position: relative;
     height: 100vh;
     margin-top: 8rem;
     display: flex;
@@ -225,6 +236,22 @@ li.active a
     background: url(../images/svg/Colored\ Patterns.svg);
     background-size: cover;
     background-repeat: no-repeat;
+}
+.dark-sun-mode
+{
+    position: absolute;
+    right: 2rem;
+    top: 1rem;
+    z-index: 10001;
+}
+.dark-sun-mode i
+{
+    font-size: 3.5rem;
+    color: var(--whiteColor);
+}
+.dark-sun-mode .ri-contrast-2-line
+{
+    color: white;
 }
 .home .txt-content
 {
@@ -276,6 +303,7 @@ li.active a
     font-weight: 800;
     line-height: 1.7;
     letter-spacing: .4rem;
+    color: #fff;
 }
 .home .txt-content h2
 {
@@ -283,6 +311,7 @@ li.active a
     font-weight: 800;
     line-height: 1.7;
     margin-top: 1.5rem;
+    color: #fff;
 }
 .home .txt-content p
 {
@@ -290,6 +319,7 @@ li.active a
     line-height: 1.7;
     font-weight: 400;
     margin-top: 1.5rem;
+    color: #fff;
 }
 .home .txt-content .button
 {
@@ -717,6 +747,11 @@ li.active a
 {
     width: fit-content;
     padding: 1rem 2rem;
+}
+.contact .form-box form input.error-valid
+{
+    border-bottom: .3rem solid var(--redColor);
+
 }
 
 /* ########### end contact ##################*/
