--- a/views/user/services.ejs
+++ b/views/user/services.ejs
@@ -55,7 +55,7 @@
               <span class="dashboard">dashBoard</span>
             </div>
             <div class="profile-details">
-              <img src="<%= '/images/' + user.avatar%>" alt="">
+              <img src="" alt="">
               <span class="admin_name">admin</span>
             </div>
           </nav>
@@ -91,20 +91,20 @@
           </div>
           <div class="row">
             <ol class="list-group personal-info-list">
-              <% items.forEach(element => { %> 
+            
               <li class="list-group-item d-flex justify-content-between align-items-start">
                 <div class="content w-100 d-flex justify-content-between">
                   <div class="info-content-txt">
-                    <div class="fw-bold">Skills Name : <%= element.title %> </div>
-                    <div class="fw-small">Skills Level : <%= element.level %>  %</div>
+                    <div class="fw-bold">Skills Name : </div>
+                    <div class="fw-small">Skills Level :  %</div>
                   </div>
-                  <img src="<%= '/images/' + user.avatar%>" alt="" style="width: 100px; height: 100px; border-radius: 50%;">
+                  <img src="" alt="" style="width: 100px; height: 100px; border-radius: 50%;">
                   <div class="op-btn d-flex flex-column align-items-center justify-content-around">
-                    <span class="ri-pencil-fill update-btn" type="button"  data-bs-toggle="modal" data-bs-target=#<%= element.title %> ></span>
-                    <span class="ri-delete-bin-5-line delete-btn " type="button"  data-bs-toggle="modal" data-bs-target=#<%= element.title+"hadi" %>></span>
+                    <span class="ri-pencil-fill update-btn" type="button"  data-bs-toggle="modal" data-bs-target='' ></span>
+                    <span class="ri-delete-bin-5-line delete-btn " type="button"  data-bs-toggle="modal" data-bs-target=''></span>
                   </div>
                 </div>
-                <div class="modal fade" id=<%= element.title %>  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal fade" id= tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                   <div class="modal-dialog">
                     <div class="modal-content">
                       <div class="modal-header">
@@ -114,13 +114,13 @@
                       <div class="modal-body">
                         <form action="/users/update"  method="POST">
                           <div class="col-12">
-                            <input type="text" class="form-control" name="id" id="id" placeholder="id" value=<%=element._id %>  >
+                            <input type="text" class="form-control" name="id" id="id" placeholder="id" value= '' >
                           </div>
                           <div class="col-12">
-                              <input type="text" class="form-control" name="title" id="title" placeholder="skill title" value=<%=element.title %>  >
+                              <input type="text" class="form-control" name="title" id="title" placeholder="skill title" value=''  >
                           </div>
                           <div class="col-12">
-                              <input type="number" class="form-control" name="level" id="level" placeholder="skill level" value=<%= element.level %> >
+                              <input type="number" class="form-control" name="level" id="level" placeholder="skill level" value='' >
                           </div>
                           <div class="modal-footer">
                               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">close</button>
@@ -132,7 +132,7 @@
                   </div>
                 </div>
 
-                <div class="modal fade" id=<%= element.title+"hadi" %> tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal fade" id='' tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                   <div class="modal-dialog">
                     <div class="modal-content">
                       <div class="modal-header">
@@ -143,7 +143,7 @@
                         <p>Are you sure you want to delete this skill?</p>
                         <form action="/users/delete"  method="POST">
                           <div class="col-12">
-                            <input type="text" class="form-control" name="id" id="id" placeholder="id" value=<%=element._id %>  >
+                            <input type="text" class="form-control" name="id" id="id" placeholder="id" value=''  >
                           </div>
                           <div class="modal-footer">
                               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">close</button>
@@ -154,8 +154,7 @@
                     </div>
                   </div>
                 </div>
-              </li>
-              <% }); %> 
+              </li> 
               
               
             </ol>
