--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -6,13 +6,22 @@
     --text-color:#1c2733;
     --stat-color:#EB4A4A;
 
+
+    --mainColor:#0E1630;
+    --secondColor:#808DAD;
+    --redColor:#EB4A4A;
+    --whiteColor:#fff;
+    --shadow-black-100:0 2px 10px #808dad9c;
+    --transparentBordercolor:#808dad2e;
+
 }
 body
 {
-    overflow-x: hidden;
+    overflow: hidden;
     background: var(--main-color);
-    height: 100vh;
+    max-height: 100vh;
     font-family: 'Cairo', sans-serif;
+    
 }
 a
 {
@@ -36,6 +45,60 @@ a.active
 }
 
 /* start header */
+.top-headers
+{
+    background: #0e1527fa;
+    padding: 20px 0;
+    
+}
+.top-headers .container
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.top-headers .user-info
+{
+    display: inline-flex;
+    align-items: center;
+    column-gap: 20px;
+
+}
+.top-headers .user-info img
+{
+    width: 80px;
+    height: 80px;
+    line-height: 80px;
+    text-align: center;
+    background: #eee;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 22px;
+    
+}
+.burgger-icon
+{
+    display: none;
+}
+.sidbare
+{
+    
+    height: 100vh;
+    border-top: 1px solid var(--redColor);
+    
+}
+
+.brand
+{
+    font-size: 24px;
+    color: var(--whiteColor);
+}
+.brand-tail
+{
+    color: var(--redColor);
+
+}
+
 /* start top header */
 .top-header
 {
@@ -75,6 +138,11 @@ a
 .nav-item
 {
     overflow: hidden;
+}
+.nav-list.active
+{
+    left: 0vw;
+    transition: all 0.5s linear;
 }
 .navbar
 {
@@ -146,6 +214,11 @@ a
     overflow: hidden;
     
 
+}
+.person-skills
+{
+    max-height: 70vh;
+    overflow: scroll;
 }
 .slide-cont .slide
 {
@@ -446,14 +519,12 @@ a
     margin-left: 0;
     margin-right: 0;
 }
-.sidbare
-{
-    background: var(--main-color);
-    height: 100vh;
-}
+
+
 aside
 {
-    background: var(--text-color);
+    background: #0e1527fa;
+    
 }
 .logo-details i
 {
@@ -503,6 +574,7 @@ nav .profile-details
     position: relative;
     list-style: none;
     height: 50px;
+    margin: 5px 0;
     border-start-end-radius: 15px;
     border-bottom-left-radius: 15px;
 }
@@ -510,6 +582,7 @@ nav .profile-details
 .nav-links li.active
 {
     background: var(--stat-color);
+    color: var(--whiteColor);
 
 }
 .nav-links li a
@@ -535,19 +608,31 @@ nav .profile-details
     min-width: 60px;
     text-align: center;
     font-size: 18px;
-    color: #fff;
+    color: var(--secondColor);
 }
-.nav-links li a .links_name
+.nav-links li a 
 {
-    color: #fff;
+    color: var(--secondColor);
     font-size: 15px;
     font-weight: 400;
     white-space: nowrap;
+    transition: all 0.3s;
+}
+.nav-links li.active a 
+{
+    color: var(--whiteColor);
+}
+.nav-links li a:hover,
+.nav-links li a.active
+{
+    color: #fff;
 }
 .dashboard-section
 {
     max-height: 100vh;
     overflow: hidden;
+    background: url(../images//svg/Colored\ Patterns.svg);
+    background-size: contain;
     
   
 }
@@ -618,7 +703,7 @@ nav .profile-details .admin_name
 }
 .delete-btn:hover
 {
-    color: rgb(209, 19, 19);
+    color: var(--redColor)
 
 }
 
@@ -838,3 +923,30 @@ nav .profile-details .admin_name
 }
 /*end about us*/
 
+@media (max-width:991px){
+.burgger-icon
+{
+    display: flex;
+    color: #fff;
+    font-size: 35px;
+}
+.brand
+{
+    display: none;
+}
+.nav-list
+{
+    position: absolute;
+    left: -100vw;
+    z-index: 1000;
+    width: 100%;
+    transition: all 0.5s linear;
+}
+.dashboard-section
+{
+    width: 100%;
+}
+
+   
+
+}
