--- a/views/user/services.ejs
+++ b/views/user/services.ejs
@@ -13,13 +13,24 @@
     <link rel="stylesheet" href="/admin/css/style.css">
 </head>
 <body>
+  <div class="top-headers">
+    <div class="container">
+      <div class="brand-container">
+        <div class="brand">Sofan<span class="brand-tail">Tec</span></div>
+        <i class="ri-menu-line burgger-icon" id="toggle-icon"></i>
+      </div>
+      <nav>
+        
+        <div class="profile-details">
+          <img src="<%= '/images/' + user.avatar%>" alt="">
+          <span class="admin_name">admin</span>
+        </div>
+      </nav>
+    </div>
+  </div>
    <!--start dashboard-->
    <div class="row sidbare">
-     <aside class="col-md-4">
-        <div class="logo-details text-center">
-          <i class='bx bxl-c-plus-plus'></i>
-          <span class="logo_name"> dashBoard</span>
-        </div>
+     <aside class="col-md-2 nav-list" id="toggle-list">
         <ul class="nav-links">
           <li>
             <a href="/users/profile" >
@@ -27,12 +38,12 @@
             </a>
           </li>
           <li class="users/services">
-            <a href="dashboard-person-experince.html">
+            <a href="./skills">
               <span class="links_name">skills</span>
             </a>
           </li>
-          <li>
-            <a href="dashboard-person-skills.html">
+          <li class="active">
+            <a href="./services" >
               <span class="links_name">services</span>
             </a>
           </li>
@@ -41,42 +52,40 @@
               <span class="links_name">our Works</span>
             </a>
           </li>
+          <li>
+            <a href="./messages">
+              <span class="links_name">Messages</span>
+            </a>
+          </li>
           <li class="log_out">
-            <a href="index.html">
+            <a href="/users/logout">
               <span class="links_name">logout </span>
             </a>
           </li>
         </ul>
      </aside>
-     <div class="dashboard-section col-md-8">
+     <div class="dashboard-section col-md-10">
        <div class="row">
-          <nav>
-            <div class="sidebar-button">
-              <span class="dashboard">dashBoard</span>
-            </div>
-            <div class="profile-details">
-              <img src="" alt="">
-              <span class="admin_name">admin</span>
-            </div>
-          </nav>
+        <a type="button" data-bs-toggle="modal" data-bs-target="#addModal" style="color: #808DAD; margin: 20px 0;">add  service</a>  
        </div>
        <div class="row container person-skills">
-          <h2 class="text-center fs-4"> personal skills</h2>
-          <a type="button" data-bs-toggle="modal" data-bs-target="#addModal">add  skill</a>
           <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title flex-grow-1" id="exampleModalLabel">Add </h5>
+                  <h5 class="modal-title flex-grow-1" id="exampleModalLabel" >Add </h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form action="/users/add"  method="POST">
+                    <form action="/users/addservice" enctype="multipart/form-data"  method="POST">
                       <div class="col-12">
-                          <input type="text" class="form-control" name="Atitle" id="title" placeholder="add skill title" >
+                          <input type="text" class="form-control" name="servicetitle" id="title" placeholder="add service title" >
                       </div>
                       <div class="col-12">
-                          <input type="number" class="form-control" name="Alevel" id="level" placeholder="add skill level" >
+                          <input type="text" class="form-control" name="servicedesc" id="description" placeholder="add service description" >
+                      </div>
+                      <div class="col-12">
+                        <input type="file" class="form-control" name="serviceimg" id="img" >
                       </div>
                       <div class="modal-footer">
                           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">close</button>
@@ -91,20 +100,21 @@
           </div>
           <div class="row">
             <ol class="list-group personal-info-list">
+              <% serviceitems.forEach(element => { %>
             
               <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="content w-100 d-flex justify-content-between">
-                  <div class="info-content-txt">
-                    <div class="fw-bold">Skills Name : </div>
-                    <div class="fw-small">Skills Level :  %</div>
+                <div class="content w-100 d-flex justify-content-between " style="align-items: center;">
+                  <div class="info-content-txt" style="flex-basis: 70%;">
+                    <div class="fw-bold">services Name : <%= element.title %></div>
+                    <div class="fw-small">services Description :  <%= element.description %></div>
                   </div>
-                  <img src="" alt="" style="width: 100px; height: 100px; border-radius: 50%;">
-                  <div class="op-btn d-flex flex-column align-items-center justify-content-around">
-                    <span class="ri-pencil-fill update-btn" type="button"  data-bs-toggle="modal" data-bs-target='' ></span>
-                    <span class="ri-delete-bin-5-line delete-btn " type="button"  data-bs-toggle="modal" data-bs-target=''></span>
+                  <img src="<%= '/images/' + element.image%>" alt="" style="width: 100px; height: 100px; border-radius: 6px;">
+                  <div class="op-btn d-flex flex-column align-items-center justify-content-around" style="flex-basis: 10%;">
+                    <span class="ri-pencil-fill update-btn" type="button"  data-bs-toggle="modal" data-bs-target='#updatemodal' ></span>
+                    <span class="ri-delete-bin-5-line delete-btn " type="button"  data-bs-toggle="modal" data-bs-target='#deletmodal'></span>
                   </div>
                 </div>
-                <div class="modal fade" id= tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal fade" id= "updatemodal" aria-labelledby="exampleModalLabel" aria-hidden="true">
                   <div class="modal-dialog">
                     <div class="modal-content">
                       <div class="modal-header">
@@ -132,15 +142,15 @@
                   </div>
                 </div>
 
-                <div class="modal fade" id='' tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal fade" id='deletmodal' tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                   <div class="modal-dialog">
                     <div class="modal-content">
                       <div class="modal-header">
-                        <h5 class="modal-title flex-grow-1" id="exampleModalLabel">delete skill</h5>
+                        <h5 class="modal-title flex-grow-1" id="exampleModalLabel">delete services</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                       </div>
                       <div class="modal-body">
-                        <p>Are you sure you want to delete this skill?</p>
+                        <p>Are you sure you want to delete this service?</p>
                         <form action="/users/delete"  method="POST">
                           <div class="col-12">
                             <input type="text" class="form-control" name="id" id="id" placeholder="id" value=''  >
@@ -155,6 +165,8 @@
                   </div>
                 </div>
               </li> 
+              <% }); %> 
+              
               
               
             </ol>
